--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.4.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "moment": "^2.24.0",
     "qs": "^6.7.0",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
@@ -19,7 +20,8 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-saga": "^1.0.2",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "save": "^2.4.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
